modules/grammars/language/src/test/resources/cocos/invalid/ExcludeExistingParent.lc
/*
 * (c) https://github.com/MontiCore/monticore
 */
package invalid

language ExcludeExistingParent {
    template undeclareExistingParent {
        path "SomePath"
        label "Some Label"

        option someOption: String {
            label "Some Option"
        }
    }
}
